vlib/v/checker/tests/method_array_slice.vv
import os

fn main() {
	a := os.args.clone()
	println(a.slice(1))
	println(a[1..])
}
